# hvr-imageio

./: CMakeLists.txt  README.md
.ci/azure-pipelines/: build-pullrequest-windows.yml  build-unit-test-ubuntu.yml  build-unit-test-windows.yml
.ci/scripts/: InstallTest.sh
apps/: CMakeLists.txt
apps/ReadExivExample/: CMakeLists.txt  config_example.xml
apps/ReadExivExample/src/: ReadExivExample.cpp
modules/: CMakeLists.txt
modules/ImageIO/: CMakeLists.txt  info.dox
modules/ImageIO/include/Hvr/ImageIO/: ImageIO.h
modules/ImageIO/src/: ImageIO.cpp
unit-test/: CMakeLists.txt  run-test.sh
unit-test/ImageIO/: CMakeLists.txt
unit-test/ImageIO/data/ImageIO/: face_viewlbl_exiv.tif  random_img.tif
unit-test/ImageIO/include/: ImageIOTest.h
unit-test/ImageIO/src/: ImageIOTest.cpp
vcpkg/: CONTROL  portfile.cmake
